fix layout issue

--- a/public/css/terms.css
+++ b/public/css/terms.css
@@ -30,6 +30,7 @@
 
 .long-text-wrapper h3 {
 	margin: 25px auto 10px;
+	text-align: left;
 }
 
 @media only screen and (min-device-width : 320px) and (orientation : portrait) {
